--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,5 @@
-<header class="bg-blue-700 h-16 flex justify-center items-center">
+<header class="bg-blue-700 flex justify-between items-center p-3">
+  <h1 class="text-white text-2xl">Awesome TODO</h1>
   <input
     type="text"
     class="h-10 w-96 rounded p-4"
